Add native image support